# allstak-react-native

./: .gitignore  AllStakRN.podspec  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.plugin.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
build-hooks/: allstak-sourcemaps.gradle  allstak-xcode.sh  eas-post-bundle.js  upload-sourcemaps.js  xcode-build-phase.sh
native/: README.md
native/android/src/main/cpp/: CMakeLists.txt  allstak_signal_handler.cpp
scripts/: post-build.mjs
src/: architecture.ts  auto-breadcrumbs.ts  client.ts  contexts.ts  expo-plugin.ts  http-instrumentation.ts  http-redact.ts  http-requests.ts  index.ts  install.ts  mechanism.ts  metro.ts  navigation.ts  persistence.ts  privacy.tsx  provider.tsx  release-detect.ts  replay-surrogate.ts  runtime.ts  scope.ts  screenshot.ts  session.ts  tracing.ts  transport.ts  value-scrub.ts
test/: android-signal-record.test.mjs  architecture.test.mjs  autolinking.test.mjs  backend-contract.test.mjs  capture-matrix.test.mjs  compatibility-api.test.mjs  console-capture.test.mjs  core-paths.test.mjs  expo-plugin.test.mjs  fail-open.test.mjs  http-instrumentation.test.mjs  instrumentation.test.mjs  metro-plugin.test.mjs  mobile-dev-contract.test.mjs  navigation-auto.test.mjs  persistence.test.mjs  provider-integration.test.mjs  provider-runtime.test.mjs  provider.test.mjs  release-detect.test.mjs  replay-surrogate.test.mjs  rich-event-context.test.mjs  scope.test.mjs  screenshot-flat-api.test.mjs  sensitive-data-masking.test.mjs  (+8 more)
(+30 files in other folders)
